# xlsx-streamer

./: .gitignore  AGENTS.md  DEVELOPER.md  LICENSE.txt  README.md  mkdocs.yml  noxfile.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
docs/: index.md
examples/: example_http.py  example_local.py  example_s3.py
src/xlsx_streamer/: __init__.py  cli.py  reader.py  xlsx_generator.py  xlsx_handler.py  xlsx_metadata_extractor.py
src/xlsx_streamer/sources/: __init__.py  base.py  http.py  local.py  s3.py
tests/: test_cli.py  test_reader.py  test_sources_base.py  test_sources_http.py  test_sources_local.py  test_sources_s3.py  test_xlsx_generator.py  test_xlsx_handler.py  test_xlsx_metadata_extractor.py
